namespace Application.Schemas.Models.GetSchemaList;

public sealed record GetSchemaListResponse(List<NameIdPair> Schemas);

