namespace Application.Schemas.Models.GetSchemaList;

public sealed record NameIdPair(string Name, int Id);

